# bloodDiamond

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cpp.64AFF5F2312F6B73.idx
src/: lexical.cpp  main.cpp
